Add - Settings Dialog

--- a/src/assets/i18n/gr.json
+++ b/src/assets/i18n/gr.json
@@ -1,1 +1,3 @@
-{}
+{"gen_settings": "Ρυθμίσεις", "gen_save": "Αποθήκευση", "gen_cancel": "Ακύρωση", "gen_ok": "Εντάξει", "gen_close": "Κλείσιμο", "gen_back": "Πίσω",
+"gen_next": "Επόμενο", "gen_yes": "Ναι", "gen_no": "Όχι", "gen_confirm": "Επιβεβαίωση", "gen_error": "Σφάλμα", "gen_profile": "Προφίλ",
+"gen_switch_theme": "Αλλάξτε Θέμα", "gen_logout": "Αποσύνδεση", "change_settings": "Αλλαγή Ρυθμίσεων"}
