--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,8 +1,8 @@
 {"gen_welcome": "Welcome", "gen_settings": "Settings", "gen_save": "Save", "gen_cancel": "Cancel", "gen_ok": "Ok", "gen_close": "Close", "gen_back":
 "Back","gen_next": "Next", "gen_yes": "Yes", "gen_no": "No", "gen_confirm": "Confirm", "gen_error": "Error", "gen_profile": "Profile",
-"gen_switch_theme": "Switch Theme", "gen_logout": "Logout", "change_settings": "Change Your Current Settings", "en": "English", "gr" : "Greek",
+"change_theme": "Choose a Theme", "gen_logout": "Logout", "change_settings": "Change Your Current Settings", "en": "English", "gr" : "Greek",
 "change_lang": "Change Language", "app_title": "Online Class Scheduler", "gen_email": "Email", "gen_password": "Password", "gen_login": "Login",
 "gen_register": "Register", "gen_required": "Required", "gen_invalid_email": "Invalid Email", "gen_invalid_password": "Invalid Password",
 "gen_invalid_email_password": "Invalid Email or Password", "gen_email_exists": "Email Already Exists", "register_btn": "Register Now",
 "register_msg":"Not a User Yet?", "register2_msg": "Enter your email and create a password to register", "terms_title": "Terms and Conditions", 
-"terms_msg": "I have read and agree to the"}
+"terms_msg": "I have read and agree to the terms and conditions", "change_password": "Change Password", "gen_change" : "Change", "gen_select" : "Select"}
