--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,4 +5,5 @@
 "gen_register": "Register", "gen_required": "Required", "gen_invalid_email": "Invalid Email", "gen_invalid_password": "Invalid Password",
 "gen_invalid_email_password": "Invalid Email or Password", "gen_email_exists": "Email Already Exists", "register_btn": "Register Now",
 "register_msg":"Not a User Yet?", "register2_msg": "Enter your email and create a password to register", "terms_title": "Terms and Conditions", 
-"terms_msg": "I have read and agree to the terms and conditions", "change_password": "Change Password", "gen_change" : "Change", "gen_select" : "Select"}
+"terms_msg": "I have read and agree to the terms and conditions", "change_password": "Change Password", "gen_change" : "Change", "gen_select" : "Select",
+"username": "Username"}
