--- a/src/assets/i18n/gr.json
+++ b/src/assets/i18n/gr.json
@@ -6,4 +6,4 @@
 "gen_invalid_password": "Μη έγκυρος κωδικός", "gen_invalid_email_password": "Μη έγκυρο email ή κωδικός", "gen_email_exists": "Μη έγκυρο όνομα",
 "register_btn":"Κάνε εγγραφή τώρα", "register_msg":"Δεν είστε ακόμη χρήστης;","terms_title": "Όροι Χρήσης", "terms_msg":"Έχω διαβάσει & συμφωνώ με τους",
 "register2_msg":"Εισαγάγετε το email σας και δημιουργήστε έναν κωδικό πρόσβασης για κάνετε εγγραφή", "change_password": "Αλλαγή Κωδικού", "gen_change" : "Change",
-"gen_select" : "Επιλογή"}
+"gen_select" : "Επιλογή", "username": "Όνομα"}
