--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,4 +14,5 @@
 "select_theme": "Select the app theme you want to be displayed", "update_password": "Update your account password", "home": "Home",
 "gen_passwords_do_not_match": "Passwords do not match", "gen_password_too_short": "Password too short", "gen_password_too_long": "Password too long",
 "gen_password_invalid": "Password invalid", "gen_check_confirm_password": "Confirm Password", "field_required": "Field Required", "new_password": "New Password",
-"current_password": "Current Password", "gen_help": "Help"}
+"current_password": "Current Password", "gen_help": "Help", "gen_intro": "Welcome to the Class Registration Portal.", 
+"gen_intro_msg": "Start by searching for a lecture or browse the featured classes below.", "gen_reg_status": "Next Registration Period: Deadline June 1st, Only 10 days left."}
